# blockchainApp

./: .gitlab-ci.yml  .gitmodules  init.sh  lol.txt
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/res/layout/: activity_main.xml
AndroidApp/app/src/main/res/values/: strings.xml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
android/: .gitignore  build.gradle  gradle.properties  ktlint.gradle  lint.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: home_foreground.xml  rounded_corners.xml
android/app/src/main/res/layout/: activity_main.xml  activity_side_panel.xml  add_student_bottom_panel.xml  app_bar_side_panel.xml  bottom_button.xml  content_side_panel.xml  fragment_course.xml  fragment_course_list.xml  fragment_course_result.xml  fragment_detailed_course.xml  fragment_detailed_student.xml  fragment_get_course_info.xml  fragment_graded_student.xml  fragment_home.xml  fragment_pdfviewer.xml  fragment_register.xml  fragment_register_list.xml  fragment_search.xml  fragment_settings.xml  fragment_student.xml  fragment_student_info.xml  fragment_student_list.xml  fragment_student_result.xml  nav_header.xml  nav_header_side_panel.xml
android/app/src/main/res/menu/: activity_side_panel_drawer.xml  side_panel.xml  toolbar.xml
android/app/src/main/res/mipmap-anydpi-v26/: clasbook.xml  classbook_round.xml
android/gradle/wrapper/: gradle-wrapper.properties
androidClient/app/: build.gradle
androidClient/app/src/main/: AndroidManifest.xml
androidClient/gradle/wrapper/: gradle-wrapper.properties
boot/: devicetree.dtb  devicetree.dts  uEnv.txt  uImage
cloud/: .firebaserc
cloud/functions/: package-lock.json
cloud/functions/src/: index.ts
desktop/: .gitignore  build.gradle  linter.sh
desktop/config/checkstyle/: checkstyle.xml
desktop/gradle/wrapper/: gradle-wrapper.properties
desktop/src/main/java/: Main.java
desktop/src/main/java/constants/: ServerUrls.java
desktop/src/main/java/controllers/: Application.java  ChainViewerController.java  ChangePasswordController.java  CreateUserController.java  DeleteUserController.java  Login.java  LoginController.java  LogsViewer.java
desktop/src/main/java/models/: AllUsersRequest.java  Bloc.java  Block.java  BlocksRequest.java  ChainRequest.java  ChainResponse.java  ChaineRequest.java  CreateUserRequest.java  DeleteUserRequest.java  LoginRequest.java  LoginResponse.java  LogsRequest.java  LogsResponse.java  NewUserRequest.java  PasswordRequest.java  RegisterResponse.java  User.java
desktop/src/main/java/services/: CredentialsManager.java  RestService.java
desktop/src/main/resources/: logs.txt
desktop/src/main/resources/cert/: rootCA.crt
desktop/src/main/resources/styles/: buttonStyle.css
desktop/src/main/resources/values/: strings.json  strings.xml
desktop/src/main/resources/views/: ChainViewer.fxml  ChangePasswordView.fxml  CreateUserTab.fxml  DeleteUsersTab.fxml  LogEntry.fxml  Login.fxml  LogsViewer.fxml  TopMenuBar.fxml  application.fxml
docker/: Dockerfile  Dockerfile.package  build.sh
documentation/: rapportFinal.docx
server/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  clang.sh  createDb.sh  database.sh  lint.sh  server.csr  server.key
server/cert/: .csr  .key  cert.conf  cert.ext  client.crt  client.csr  client.key  createCert.sh  localhost.crt  localhost.csr  localhost.key  rootCA.key  rootCA.srl  server.crt  server.csr  server.key
server/cmake/: FindSQLite3.cmake  armv7_setup.cmake  armv7_toolchain.cmake  third_party.cmake
server/common/: CMakeLists.txt  example.cc
server/common/include/common/: base64.hpp  database.hpp  database_models.hpp  example.hpp  firebase_helper.hpp  format_helper.hpp  gflags_helper.hpp  logger.hpp  message_helper.hpp  miner_models.hpp  models.hpp  optional.hpp  optional_ref.hpp  query.hpp  scripts_helper.hpp  sqlite_err.hpp  statement.hpp  token_helper.hpp
server/common/src/: database.cpp  example.cc  example.cpp  firebase_helper.cpp  logger.cpp  message_helper.cpp  query.cpp  sqlite_err.cpp  statement.cpp
server/miner/: CMakeLists.txt  miner.cc  miner.cpp
server/miner/include/: example.h
server/miner/include/miner/: block.hpp  blockchain-controller.hpp  blockchain.hpp  example.hpp  zmq.hpp
server/miner/src/: block.cpp  blockchain-controller.cpp  blockchain.cpp  example.cc  example.cpp  zmq.cpp
server/package/: PKGBUILD  inf3995-reset.sh
server/rest/: CMakeLists.txt  rest.cc  rest.cpp  rest_server.cc
server/rest/include/: example.h  example.hpp  example_endpoint.hpp
server/rest/include/rest/: admin_controller.hpp  custom_router.hpp  example_controller.hpp  example_endpoint.hpp  file_controller.hpp  info_controller.hpp  main_controller.hpp  ping_controller.hpp  token_manager.hpp  transaction_controller.hpp  user_controller.hpp  zmq.hpp
server/rest/src/: admin_controller.cpp  custom_router.cpp  example.cc  example.cpp  example_controller.cpp  example_endpoint.cpp  file_controller.cpp  info_controller.cpp  main_controller.cpp  ping_controller.cpp  token_manager.cpp  transaction_controller.cpp  user_controller.cpp  zmq.cpp
server/sql/: addUsers.sql  createDb.sh  createDb.sql
server/src/: CMakeLists.txt  rest_server.cc
server/systemd/: inf3995-miner.service  inf3995-rest.service  inf3995.env  inf3995.env.example
server/tests/: CMakeLists.txt  admin_controller_test.cpp  block_test.cpp  blockchain_test.cpp  database_test.cpp  example_test.cc  example_test.cpp  file_controller_test.cpp  info_controller_test.cpp  main_controller_test.cpp  ping_controller_test.cpp  rest_utils.hpp  transaction_controller_test.cpp  user_controller_test.cpp  utils.cpp  utils.hpp  zmq_test.cpp
server/tests/data/block/test-load-invalid-block/: 420
server/tests/data/blockchain/load-from-dir/: 420  metadata
server/tests/data/blockchain/load-with-mismatch-id/: 420
suivi/: rapport_semaine1.docx  rapport_semaine2.docx  rapport_semaine3.docx  rapport_semaine4.docx  rapport_semaine5.docx  rapport_semaine6.docx  rapport_semaine7.docx
(+84 files in other folders)
